--- a/configs/swinir/metafile.yml
+++ b/configs/swinir/metafile.yml
@@ -22,7 +22,7 @@ Models:
       Set14 SSIM: 0.923
       Set5 PSNR: 38.324
       Set5 SSIM: 0.9626
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1NwpDavsYKNcVptQyUrCzFp2ArAtBV6a2/view?usp=share_link
 - Config: configs/swinir/swinir_x3s48w8d6e180_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
@@ -39,7 +39,7 @@ Models:
       Set14 SSIM: 0.8508
       Set5 PSNR: 34.864
       Set5 SSIM: 0.9317
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/11fn_CkgaYl-flzaeJeapKa0d17RwPNQ9/view?usp=share_link
 - Config: configs/swinir/swinir_x4s48w8d6e180_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
@@ -56,7 +56,7 @@ Models:
       Set14 SSIM: 0.7915
       Set5 PSNR: 32.7315
       Set5 SSIM: 0.9029
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1KWaJ3X6ZrXJZ37jHczdjRTcElQ_sPTpP/view?usp=share_link
 - Config: configs/swinir/swinir_x2s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
@@ -73,7 +73,7 @@ Models:
       Set14 SSIM: 0.9252
       Set5 PSNR: 38.3971
       Set5 SSIM: 0.9629
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1Uw1QtPKnBvFalgx8sC-moFmTLCBtfbqM/view?usp=share_link
 - Config: configs/swinir/swinir_x3s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
@@ -90,7 +90,7 @@ Models:
       Set14 SSIM: 0.854
       Set5 PSNR: 34.9335
       Set5 SSIM: 0.9323
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/13VOC_15bH4OcfqLX3TYa3NwoTSADKH9b/view?usp=share_link
 - Config: configs/swinir/swinir_x4s64w8d6e180_8xb4-lr2e-4-500k_df2k.py
   In Collection: SwinIR
@@ -107,7 +107,7 @@ Models:
       Set14 SSIM: 0.7953
       Set5 PSNR: 32.9214
       Set5 SSIM: 0.9053
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/12IXYTR_3UebYbTqR9wumBEv5AlL6Qyr9/view?usp=share_link
 - Config: configs/swinir/swinir_x2s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
@@ -124,7 +124,7 @@ Models:
       Set14 SSIM: 0.9207
       Set5 PSNR: 38.1289
       Set5 SSIM: 0.9617
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/13dDwSMxjBpZZiXlgKHH9onkxzLUKZ0LX/view?usp=share_link
 - Config: configs/swinir/swinir_x3s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
@@ -141,7 +141,7 @@ Models:
       Set14 SSIM: 0.8468
       Set5 PSNR: 34.6037
       Set5 SSIM: 0.9293
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1Jj0Mdyd2sbaaredwNxVtp0zraHr_EgCN/view?usp=share_link
 - Config: configs/swinir/swinir_x4s64w8d4e60_8xb4-lr2e-4-500k_div2k.py
   In Collection: SwinIR
@@ -158,7 +158,7 @@ Models:
       Set14 SSIM: 0.7861
       Set5 PSNR: 32.4343
       Set5 SSIM: 0.8984
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1hf-Bod4nAo13dRgyHKYiAi260a1sYCT8/view?usp=share_link
 - Config: configs/swinir/swinir_gan-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -170,7 +170,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 5.7975
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1efvIxFkevJpRsUd-Mvq7OIeeGbBhXtyJ/view?usp=share_link
 - Config: configs/swinir/swinir_psnr-x2s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -182,7 +182,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 7.2738
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1RpeouyxHZbhS0z-uoX8r5Ys2jD8R59IL/view?usp=share_link
 - Config: configs/swinir/swinir_gan-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -194,7 +194,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 5.2329
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1YryTalO1rqlqtVi7ZSnEGXXqg_Pg4_9w/view?usp=share_link
 - Config: configs/swinir/swinir_psnr-x4s64w8d6e180_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -206,7 +206,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 7.746
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1T0XYcNdAVM_UuQlgauHrUSLM_EPB_XCY/view?usp=share_link
 - Config: configs/swinir/swinir_gan-x4s64w8d9e240_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -218,7 +218,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 5.1464
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1RJOir_JbWcjZDKK1Rq6GqDtrE4DQhbKL/view?usp=share_link
 - Config: configs/swinir/swinir_psnr-x4s64w8d9e240_8xb4-lr1e-4-600k_df2k-ost.py
   In Collection: SwinIR
@@ -230,7 +230,7 @@ Models:
   - Dataset: Others
     Metrics:
       RealSRSet+5images NIQE: 7.6378
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1YAeG9duFEt5yJtFS_iCFI685mgb7UUJi/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN15.py
   In Collection: SwinIR
@@ -244,7 +244,7 @@ Models:
       BSD68 PSNR: 32.5203
       Set12 PSNR: 33.9731
       Urban100 PSNR: 34.3424
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/18PmDIFYZtlvyLQnGYvKShO-CdtlPwIwe/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN25.py
   In Collection: SwinIR
@@ -258,7 +258,7 @@ Models:
       BSD68 PSNR: 30.1377
       Set12 PSNR: 31.6434
       Urban100 PSNR: 31.9493
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1PqC9a-3wfyH6DeVpP2yi6r6stqEB1vfj/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-grayDN50.py
   In Collection: SwinIR
@@ -272,7 +272,7 @@ Models:
       BSD68 PSNR: 27.3157
       Set12 PSNR: 28.5651
       Urban100 PSNR: 28.6626
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1miDCBmxe73XoxkJDLAmqOBbuiY9U6JRz/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN15.py
   In Collection: SwinIR
@@ -287,7 +287,7 @@ Models:
       Kodak24 PSNR: 35.3555
       McMaster PSNR: 35.6205
       Urban100 PSNR: 35.1836
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/16pfIBzAXTv6-3xTsKXEtLkY2pLM-tNFn/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN25.py
   In Collection: SwinIR
@@ -302,7 +302,7 @@ Models:
       Kodak24 PSNR: 32.9003
       McMaster PSNR: 33.3198
       Urban100 PSNR: 32.9458
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1pihZhiw1V5hWNoaWCuabN8KCj6_il6KG/view?usp=share_link
 - Config: configs/swinir/swinir_s128w8d6e180_8xb1-lr2e-4-1600k_dfwb-colorDN50.py
   In Collection: SwinIR
@@ -317,7 +317,7 @@ Models:
       Kodak24 PSNR: 29.8058
       McMaster PSNR: 30.2027
       Urban100 PSNR: 29.8832
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1pihZhiw1V5hWNoaWCuabN8KCj6_il6KG/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR10.py
   In Collection: SwinIR
@@ -332,7 +332,7 @@ Models:
       Classic5 SSIM: 0.8254
       LIVE1 PSNR: 29.8611
       LIVE1 SSIM: 0.8292
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1LMEGlGtYcrJ9dhC8pmNsCAWyeZq1Dfc5/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR20.py
   In Collection: SwinIR
@@ -347,7 +347,7 @@ Models:
       Classic5 SSIM: 0.8753
       LIVE1 PSNR: 32.2667
       LIVE1 SSIM: 0.8914
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1624dceqoBD5CwqLuL_ozPaYuIQex2WmL/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR30.py
   In Collection: SwinIR
@@ -362,7 +362,7 @@ Models:
       Classic5 SSIM: 0.8966
       LIVE1 PSNR: 33.7001
       LIVE1 SSIM: 0.9179
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1X70GSCK8Wo9nYUmtN0MysCarIHliB3WM/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-grayCAR40.py
   In Collection: SwinIR
@@ -377,7 +377,7 @@ Models:
       Classic5 SSIM: 0.9087
       LIVE1 PSNR: 34.6846
       LIVE1 SSIM: 0.9322
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1HQGYXthHnmVsng1313KZmGzewsWPzzDT/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR10.py
   In Collection: SwinIR
@@ -392,7 +392,7 @@ Models:
       Classic5 SSIM: 0.8217
       LIVE1 PSNR: 27.9085
       LIVE1 SSIM: 0.8057
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1YXlmXo5SdQF7JwEvedUmNgxrPZVwxAgg/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR20.py
   In Collection: SwinIR
@@ -407,7 +407,7 @@ Models:
       Classic5 SSIM: 0.8727
       LIVE1 PSNR: 30.2844
       LIVE1 SSIM: 0.8717
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1pY6RXvp2y98Qx4VhaZOSVTpyOQzk8l9b/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR30.py
   In Collection: SwinIR
@@ -422,7 +422,7 @@ Models:
       Classic5 SSIM: 0.8949
       LIVE1 PSNR: 31.6396
       LIVE1 SSIM: 0.9
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1LUiFJCdcGCRl4NDAtiyj2Ba87fKW3p5x/view?usp=share_link
 - Config: configs/swinir/swinir_s126w7d6e180_8xb1-lr2e-4-1600k_dfwb-colorCAR40.py
   In Collection: SwinIR
@@ -437,5 +437,5 @@ Models:
       Classic5 SSIM: 0.9076
       LIVE1 PSNR: 32.5833
       LIVE1 SSIM: 0.9158
-    Task: Image Super-Resolution,
+    Task: Image Super-Resolution, Image denoising, JPEG compression artifact reduction
   Weights: https://drive.google.com/file/d/1N7veqPM2ypF1hOyq8UC7BHLb4K5391wZ/view?usp=share_link
