--- a/configs/aot_gan/metafile.yml
+++ b/configs/aot_gan/metafile.yml
@@ -20,4 +20,4 @@ Models:
       SSIM: 0.682
       l1 error: 7.07
     Task: Inpainting
-  Weights: https://openmmlab-share.oss-cn-hangzhou.aliyuncs.com/mmediting/inpainting/aot_gan/AOT-GAN_512x512_4x12_places_20220509-6641441b.pth
+  Weights: https://download.openmmlab.com/mmediting/inpainting/aot_gan/AOT-GAN_512x512_4x12_places_20220509-6641441b.pth
