--- a/configs/inst_colorization/metafile.yml
+++ b/configs/inst_colorization/metafile.yml
@@ -16,4 +16,4 @@ Models:
   - Dataset: Others
     Metrics: {}
     Task: Colorization
-  Weights: https://openmmlab-share.oss-cn-hangzhou.aliyuncs.com/mmediting/inst_colorization/inst-colorizatioon_full_official_cocostuff-256x256-5b9d4eee.pth
+  Weights: https://download.openmmlab.com/mmediting/inst_colorization/inst-colorizatioon_full_official_cocostuff-256x256-5b9d4eee.pth
