--- a/configs/positional_encoding_in_gans/metafile.yml
+++ b/configs/positional_encoding_in_gans/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://openaccess.thecvf.com/content/CVPR2021/html/Xu_Positional_Encoding_As_Spatial_Inductive_Bias_in_GANs_CVPR_2021_paper.html
   README: configs/positional_encoding_in_gans/README.md
 Models:
-- Config: configs/positional_encoding_in_gans/stylegan2_c2_8xb3-1100kiters_ffhq-256x256.py
+- Config: stylegan2_c2_8xb3-1100kiters_ffhq-256x256.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -22,7 +22,7 @@ Models:
       Scales: 256.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/stylegan2_c2_config-a_ffhq_256x256_b3x8_1100k_20210406_145127-71d9634b.pth
-- Config: configs/positional_encoding_in_gans/stylegan2_c2_8xb3-1100kiters_ffhq-512x512.py
+- Config: stylegan2_c2_8xb3-1100kiters_ffhq-512x512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -37,7 +37,7 @@ Models:
       Scales: 512.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/stylegan2_c2_config-b_ffhq_512x512_b3x8_1100k_20210406_145142-e85e5cf4.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-c_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-c_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -51,7 +51,7 @@ Models:
         SSIM: 55.77
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-c_ffhq_256-512_b3x8_1100k_20210406_144824-9f43b07d.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-d_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-d_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -65,7 +65,7 @@ Models:
         SSIM: 56.16
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-d_ffhq_256-512_b3x8_1100k_20210406_144840-dbefacf6.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-e_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-e_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -79,7 +79,7 @@ Models:
         SSIM: 56.88
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-e_ffhq_256-512_b3x8_1100k_20210406_144906-98d5a42a.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -93,7 +93,7 @@ Models:
         SSIM: 57.32
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-f_ffhq_256-512_b3x8_1100k_20210406_144927-4f4d5391.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-g_c1_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-g_c1_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -107,7 +107,7 @@ Models:
         SSIM: 56.45
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c1_config-g_ffhq_256-512_b3x8_1100k_20210406_144758-2df61752.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-h_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-h_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -121,7 +121,7 @@ Models:
         SSIM: 54.35
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-h_ffhq_256-512_b3x8_1100k_20210406_145006-84cf3f48.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-i_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-i_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -135,7 +135,7 @@ Models:
         SSIM: 54.71
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-i_ffhq_256-512_b3x8_1100k_20210406_145023-c2b0accf.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-j_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-j_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -149,7 +149,7 @@ Models:
         SSIM: 54.63
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-j_ffhq_256-512_b3x8_1100k_20210406_145044-c407481b.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-k_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-k_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -163,7 +163,7 @@ Models:
         SSIM: 51.07
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-k_ffhq_256-512_b3x8_1100k_20210406_145105-6d8cc39f.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-896.py
+- Config: mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-896.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -177,7 +177,7 @@ Models:
         SSIM: 50.29
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-f_ffhq_256-896_b3x8_1100k_20210406_144943-6c18ad5d.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c1_8xb2-1600kiters_ffhq-256-1024.py
+- Config: mspie-stylegan2-config-f_c1_8xb2-1600kiters_ffhq-256-1024.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -191,7 +191,7 @@ Models:
         SSIM: 49.92
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c1_config-f_ffhq_256-1024_b2x8_1600k_20210406_144716-81cbdc96.pth
-- Config: configs/positional_encoding_in_gans/stylegan2_c2_8xb3-1100kiters_ffhq-256x256.py
+- Config: stylegan2_c2_8xb3-1100kiters_ffhq-256x256.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -205,7 +205,7 @@ Models:
       Scales: 256.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/stylegan2_c2_config-a_ffhq_256x256_b3x8_1100k_20210406_145127-71d9634b.pth
-- Config: configs/positional_encoding_in_gans/stylegan2_c2_8xb3-1100kiters_ffhq-512x512.py
+- Config: stylegan2_c2_8xb3-1100kiters_ffhq-512x512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -219,7 +219,7 @@ Models:
       Scales: 512.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/stylegan2_c2_config-b_ffhq_512x512_b3x8_1100k_20210406_145142-e85e5cf4.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-c_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-c_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -232,7 +232,7 @@ Models:
       Recall10k: 55.77
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-c_ffhq_256-512_b3x8_1100k_20210406_144824-9f43b07d.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-d_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-d_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -245,7 +245,7 @@ Models:
       Recall10k: 56.16
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-d_ffhq_256-512_b3x8_1100k_20210406_144840-dbefacf6.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-e_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-e_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -258,7 +258,7 @@ Models:
       Recall10k: 56.88
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-e_ffhq_256-512_b3x8_1100k_20210406_144906-98d5a42a.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -271,7 +271,7 @@ Models:
       Recall10k: 57.32
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-f_ffhq_256-512_b3x8_1100k_20210406_144927-4f4d5391.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-g_c1_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-g_c1_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -284,7 +284,7 @@ Models:
       Recall10k: 56.45
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c1_config-g_ffhq_256-512_b3x8_1100k_20210406_144758-2df61752.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-h_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-h_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -297,7 +297,7 @@ Models:
       Recall10k: 54.35
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-h_ffhq_256-512_b3x8_1100k_20210406_145006-84cf3f48.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-i_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-i_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -310,7 +310,7 @@ Models:
       Recall10k: 54.71
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-i_ffhq_256-512_b3x8_1100k_20210406_145023-c2b0accf.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-j_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-j_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -323,7 +323,7 @@ Models:
       Recall10k: 54.63
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-j_ffhq_256-512_b3x8_1100k_20210406_145044-c407481b.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-k_c2_8xb3-1100kiters_ffhq-256-512.py
+- Config: mspie-stylegan2-config-k_c2_8xb3-1100kiters_ffhq-256-512.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -336,7 +336,7 @@ Models:
       Recall10k: 51.07
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-k_ffhq_256-512_b3x8_1100k_20210406_145105-6d8cc39f.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-896.py
+- Config: mspie-stylegan2-config-f_c2_8xb3-1100kiters_ffhq-256-896.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -349,7 +349,7 @@ Models:
       Recall10k: 50.29
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c2_config-f_ffhq_256-896_b3x8_1100k_20210406_144943-6c18ad5d.pth
-- Config: configs/positional_encoding_in_gans/mspie-stylegan2-config-f_c1_8xb2-1600kiters_ffhq-256-1024.py
+- Config: mspie-stylegan2-config-f_c1_8xb2-1600kiters_ffhq-256-1024.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: FFHQ
@@ -362,7 +362,7 @@ Models:
       Recall10k: 49.92
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/mspie-stylegan2_c1_config-f_ffhq_256-1024_b2x8_1600k_20210406_144716-81cbdc96.pth
-- Config: configs/positional_encoding_in_gans/singan_interp-pad_balloons.py
+- Config: singan_interp-pad_balloons.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -373,7 +373,7 @@ Models:
       Num Scales: 8.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_interp-pad_balloons_20210406_180014-96f51555.pth
-- Config: configs/positional_encoding_in_gans/singan_interp-pad_disc-nobn_balloons.py
+- Config: singan_interp-pad_disc-nobn_balloons.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -384,7 +384,7 @@ Models:
       Num Scales: 8.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_interp-pad_disc-nobn_balloons_20210406_180059-7d63e65d.pth
-- Config: configs/positional_encoding_in_gans/singan_interp-pad_disc-nobn_fish.py
+- Config: singan_interp-pad_disc-nobn_fish.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -395,7 +395,7 @@ Models:
       Num Scales: 10.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_interp-pad_disc-nobn_fis_20210406_175720-9428517a.pth
-- Config: configs/positional_encoding_in_gans/singan-csg_fish.py
+- Config: singan-csg_fish.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -406,7 +406,7 @@ Models:
       Num Scales: 10.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_csg_fis_20210406_175532-f0ec7b61.pth
-- Config: configs/positional_encoding_in_gans/singan-csg_bohemian.py
+- Config: singan-csg_bohemian.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -417,7 +417,7 @@ Models:
       Num Scales: 10.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_csg_bohemian_20210407_195455-5ed56db2.pth
-- Config: configs/positional_encoding_in_gans/singan_spe-dim4_fish.py
+- Config: singan_spe-dim4_fish.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -428,7 +428,7 @@ Models:
       Num Scales: 10.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_spe-dim4_fish_20210406_175933-f483a7e3.pth
-- Config: configs/positional_encoding_in_gans/singan_spe-dim4_bohemian.py
+- Config: singan_spe-dim4_bohemian.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
@@ -439,7 +439,7 @@ Models:
       Num Scales: 10.0
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmediting/pe_in_gans/singan_spe-dim4_bohemian_20210406_175820-6e484a35.pth
-- Config: configs/positional_encoding_in_gans/singan_spe-dim8_bohemian.py
+- Config: singan_spe-dim8_bohemian.py
   In Collection: Positional Encoding in GANs
   Metadata:
     Training Data: Others
