--- a/configs/styleganv1/metafile.yml
+++ b/configs/styleganv1/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://openaccess.thecvf.com/content_CVPR_2019/html/Karras_A_Style-Based_Generator_Architecture_for_Generative_Adversarial_Networks_CVPR_2019_paper.html
   README: configs/styleganv1/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/styleganv1/styleganv1_ffhq-256x256_8xb4-25Mimgs.py
+- Config: configs/styleganv1/styleganv1_ffhq-256x256_8xb4-25Mimgs.py
   In Collection: StyleGANv1
   Metadata:
     Training Data: FFHQ
@@ -21,7 +21,7 @@ Models:
         SSIM: 27.05
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/styleganv1/styleganv1_ffhq_256_g8_25Mimg_20210407_161748-0094da86.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/styleganv1/styleganv1_ffhq-1024x1024_8xb4-25Mimgs.py
+- Config: configs/styleganv1/styleganv1_ffhq-1024x1024_8xb4-25Mimgs.py
   In Collection: StyleGANv1
   Metadata:
     Training Data: FFHQ
