--- a/configs/ggan/metafile.yml
+++ b/configs/ggan/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://arxiv.org/abs/1705.02894
   README: configs/ggan/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/ggan/ggan_dcgan-archi_lr1e-3-1xb128-12Mimgs_celeba-cropped-64x64.py
+- Config: configs/ggan/ggan_dcgan-archi_lr1e-3-1xb128-12Mimgs_celeba-cropped-64x64.py
   In Collection: GGAN
   Metadata:
     Training Data: CELEBA
@@ -19,7 +19,7 @@ Models:
       MS-SSIM: 0.3318
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/ggan/ggan_celeba-cropped_dcgan-archi_lr-1e-3_64_b128x1_12m.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/ggan/ggan_dcgan-archi_lr1e-4-1xb64-10Mimgs_celeba-cropped-128x128.py
+- Config: configs/ggan/ggan_dcgan-archi_lr1e-4-1xb64-10Mimgs_celeba-cropped-128x128.py
   In Collection: GGAN
   Metadata:
     Training Data: CELEBA
@@ -31,7 +31,7 @@ Models:
       MS-SSIM: 0.3149
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/ggan/ggan_celeba-cropped_dcgan-archi_lr-1e-4_128_b64x1_10m_20210430_143027-516423dc.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/ggan/ggan_lsgan-archi_lr1e-4-1xb128-20Mimgs_lsun-bedroom-64x64.py
+- Config: configs/ggan/ggan_lsgan-archi_lr1e-4-1xb128-20Mimgs_lsun-bedroom-64x64.py
   In Collection: GGAN
   Metadata:
     Training Data: Others
