--- a/configs/pggan/metafile.yml
+++ b/configs/pggan/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://arxiv.org/abs/1710.10196
   README: configs/pggan/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pggan/pggan_8xb4-12Mimgs_celeba-cropped-128x128.py
+- Config: configs/pggan/pggan_8xb4-12Mimgs_celeba-cropped-128x128.py
   In Collection: PGGAN
   Metadata:
     Training Data: CELEBA
@@ -18,7 +18,7 @@ Models:
       MS-SSIM: 0.3023
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/pggan/pggan_celeba-cropped_128_g8_20210408_181931-85a2e72c.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pggan/pggan_8xb4-12Mimgs_lsun-bedroom-128x128.py
+- Config: configs/pggan/pggan_8xb4-12Mimgs_lsun-bedroom-128x128.py
   In Collection: PGGAN
   Metadata:
     Training Data: Others
@@ -29,7 +29,7 @@ Models:
       MS-SSIM: 0.0602
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/pggan/pggan_lsun-bedroom_128x128_g8_20210408_182033-5e59f45d.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pggan/pggan_8xb4-12Mimg_celeba-hq-1024x1024.py
+- Config: configs/pggan/pggan_8xb4-12Mimg_celeba-hq-1024x1024.py
   In Collection: PGGAN
   Metadata:
     Training Data: CELEBA
