--- a/configs/pix2pix/metafile.yml
+++ b/configs/pix2pix/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://openaccess.thecvf.com/content_cvpr_2017/html/Isola_Image-To-Image_Translation_With_CVPR_2017_paper.html
   README: configs/pix2pix/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-80kiters_facades.py
+- Config: configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-80kiters_facades.py
   In Collection: Pix2Pix
   Metadata:
     Training Data: FACADES
@@ -19,7 +19,7 @@ Models:
       IS: 1.62
     Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/pix2pix/refactor/pix2pix_vanilla_unet_bn_1x1_80k_facades_20210902_170442-c0958d50.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-220kiters_aerial2maps.py
+- Config: configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-220kiters_aerial2maps.py
   In Collection: Pix2Pix
   Metadata:
     Training Data: MAPS
@@ -31,7 +31,7 @@ Models:
       IS: 3.137
     Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/pix2pix/refactor/pix2pix_vanilla_unet_bn_a2b_1x1_219200_maps_convert-bgr_20210902_170729-59a31517.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-220kiters_maps2aerial.py
+- Config: configs/pix2pix/pix2pix_vanilla-unet-bn_1xb1-220kiters_maps2aerial.py
   In Collection: Pix2Pix
   Metadata:
     Training Data: MAPS
@@ -43,7 +43,7 @@ Models:
       IS: 3.31
     Task: Image2Image
   Weights: https://download.openmmlab.com/mmgen/pix2pix/refactor/pix2pix_vanilla_unet_bn_b2a_1x1_219200_maps_convert-bgr_20210902_170814-6d2eac4a.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/pix2pix/pix2pix_vanilla-unet-bn_wo-jitter-flip-1xb4-190kiters_edges2shoes.py
+- Config: configs/pix2pix/pix2pix_vanilla-unet-bn_wo-jitter-flip-1xb4-190kiters_edges2shoes.py
   In Collection: Pix2Pix
   Metadata:
     Training Data: EDGES2SHOES
