--- a/configs/sngan_proj/metafile.yml
+++ b/configs/sngan_proj/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://openreview.net/forum?id=B1QRgziT-
   README: configs/sngan_proj/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_woReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
+- Config: configs/sngan_proj/sngan-proj_woReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -22,7 +22,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_cifar10_32_lr-2e-4_b64x1_woReLUinplace_is-iter400000_20210709_163823-902ce1ae.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_woReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
+- Config: configs/sngan_proj/sngan-proj_woReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -37,7 +37,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_cifar10_32_lr-2e-4_b64x1_woReLUinplace_fid-iter490000_20210709_163329-ba0862a0.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_wReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
+- Config: configs/sngan_proj/sngan-proj_wReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -52,7 +52,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_cifar10_32_lr-2e-4_b64x1_wReLUinplace_is-iter490000_20210709_202230-cd863c74.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_wReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
+- Config: configs/sngan_proj/sngan-proj_wReLUinplace_lr2e-4-ndisc5-1xb64_cifar10-32x32.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -67,7 +67,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_cifar10_32_lr-2e-4-b64x1_wReLUinplace_fid-iter490000_20210709_203038-191b2648.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_woReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
+- Config: configs/sngan_proj/sngan-proj_woReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -82,7 +82,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_imagenet1k_128_Glr2e-4_Dlr5e-5_ndisc5_b128x2_woReLUinplace_is-iter952000_20210730_132027-9c884a21.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_woReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
+- Config: configs/sngan_proj/sngan-proj_woReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -97,7 +97,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_imagenet1k_128_Glr2e-4_Dlr5e-5_ndisc5_b128x2_woReLUinplace_fid-iter988000_20210730_131424-061bf803.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_wReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
+- Config: configs/sngan_proj/sngan-proj_wReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -112,7 +112,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_imagenet1k_128_Glr2e-4_Dlr5e-5_ndisc5_b128x2_wReLUinplace_is-iter944000_20210730_132714-ca0ccd07.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj_wReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
+- Config: configs/sngan_proj/sngan-proj_wReLUinplace_Glr2e-4_Dlr5e-5_ndisc5-2xb128_imagenet1k-128x128.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -127,7 +127,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_proj_imagenet1k_128_Glr2e-4_Dlr5e-5_ndisc5_b128x2_wReLUinplace_fid-iter988000_20210730_132401-9a682411.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj-cvt-studioGAN_cifar10-32x32.py
+- Config: configs/sngan_proj/sngan-proj-cvt-studioGAN_cifar10-32x32.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
@@ -143,7 +143,7 @@ Models:
       disc_step: 5.0
     Task: Conditional GANs
   Weights: https://download.openmmlab.com/mmgen/sngan_proj/sngan_cifar10_convert-studio-rgb_20210709_111346-2979202d.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/sngan_proj/sngan-proj-cvt-studioGAN_imagenet1k-128x128.py
+- Config: configs/sngan_proj/sngan-proj-cvt-studioGAN_imagenet1k-128x128.py
   In Collection: SNGAN
   Metadata:
     Training Data: Others
