--- a/configs/wgan-gp/metafile.yml
+++ b/configs/wgan-gp/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - https://arxiv.org/abs/1704.00028
   README: configs/wgan-gp/README.md
 Models:
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/wgan-gp/wgangp_GN_1xb64-160kiters_celeba-cropped-128x128.py
+- Config: configs/wgan-gp/wgangp_GN_1xb64-160kiters_celeba-cropped-128x128.py
   In Collection: WGAN-GP
   Metadata:
     Training Data: CELEBA
@@ -18,7 +18,7 @@ Models:
       MS-SSIM: 0.2601
     Task: Unconditional GANs
   Weights: https://download.openmmlab.com/mmgen/wgangp/wgangp_GN_celeba-cropped_128_b64x1_160k_20210408_170611-f8a99336.pth
-- Config: https://github.com/open-mmlab/mmediting/tree/master/configs/wgan-gp/wgangp_GN-GP-50_1xb64-160kiters_lsun-bedroom-128x128.py
+- Config: configs/wgan-gp/wgangp_GN-GP-50_1xb64-160kiters_lsun-bedroom-128x128.py
   In Collection: WGAN-GP
   Metadata:
     Training Data: Others
