--- a/configs/global_local/metafile.yml
+++ b/configs/global_local/metafile.yml
@@ -7,7 +7,7 @@ Collections:
   - http://iizuka.cs.tsukuba.ac.jp/projects/completion/data/completion_sig2017.pdf
   README: configs/global_local/README.md
 Models:
-- Config: gl_8xb12_places-256x256.py
+- Config: configs/global_local/gl_8xb12_places-256x256.py
   In Collection: Global&Local
   Metadata:
     GPUs: '8'
@@ -21,7 +21,7 @@ Models:
       l1 error: 11.164
     Task: Inpainting
   Weights: https://download.openmmlab.com/mmediting/inpainting/global_local/gl_256x256_8x12_places_20200619-52a040a8.pth
-- Config: gl_8xb12_celeba-256x256.py
+- Config: configs/global_local/gl_8xb12_celeba-256x256.py
   In Collection: Global&Local
   Metadata:
     GPUs: '8'
